test: switch to List.first() after OpenRewrite migration